--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^5.4.10"
   }
 }
